<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CouchPotato Remote</string>
    <string name="action_settings">Settings</string>
    <string name="movie_view_none">No movies</string>
    <string name="api_key_pref">API Key</string>
    <string name="ip_address_pref">IP Address</string>
    <string name="port_pref">Port</string>
    <string name="title_wanted">Wanted</string>
    <string name="title_manage">Manage</string>
    <string name="add_movie_button">Add Movie</string>
    <string name="title_activity_add_movie">Add Movie</string>
    <string name="prompt_do_search">Search for a movie above…</string>
    <string name="no_search_results">No movies found</string>
    <string name="refresh_button">Refresh</string>
    <string name="view_log">View log</string>
    <string name="confirm_delete_movie">Are you sure you want to delete this movie?</string>
    <string name="accept_delete_movie">Delete</string>
    <string name="reject_delete_movie">Cancel</string>
    <string name="accept_change_quality">Change</string>
    <string name="reject_change_quality">Cancel</string>
    <string name="changequality_text">Select a quality:</string>
    <string name="changequality_wait">Loading qualities…</string>
    <string name="delete_movie_button">Delete</string>
    <string name="edit_quality_button">Edit Quality</string>
    <string name="show_plot_button">Plot</string>
    <string name="show_actors_button">Actors</string>
    <string name="show_directors_button">Directors</string>
    <string name="show_releases_button">Releases</string>
    <string name="ignore_release_button">Ignore</string>
    <string name="download_release_button">Download</string>
    <string name="delete_release_button">Delete</string>
    <string name="no_releases_available">No releases available.</string>


    <string-array name="log_types">
        <item>All</item>
        <item>Error</item>
        <item>Info</item>
        <item>Debug</item>
    </string-array>

</resources>
