<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="pref_key_api"
        android:title="@string/api_key_pref"
        android:defaultValue=""/>
    <EditTextPreference
        android:key="pref_key_ip"
        android:title="@string/ip_address_pref"
        android:defaultValue=""
        />
    <EditTextPreference
        android:key="pref_key_port"
        android:title="@string/port_pref"
        android:defaultValue="5050"
        android:numeric="integer"
        />
    <CheckBoxPreference
        android:key="pref_key_https"
        android:title="HTTPS"
        android:defaultValue="false"
        />

    <CheckBoxPreference
        android:key="pref_key_trustall"
        android:title="Trust All Certificates"
        android:defaultValue="false"
        android:summary="Trusts all certificates automatically. WARNING: this is insecure!"
        />

</PreferenceScreen>
