<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/ListViewCells"
        android:layout_weight="0.5"
        android:listSelector="#313D4D"
        android:dividerHeight="1dp"/>

    <no.dega.couchpotatoremote.FontedTextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cp_background_dark"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:visibility="gone"
        android:textSize="20sp"
        android:text="@string/no_releases_available"/>

    <!-- Small divider view to separate the list and the rest -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:layout_marginTop="3dp" >

        <RelativeLayout
            android:id="@+id/releases_subview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            >

            <RelativeLayout
                android:id="@+id/releases_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="3dp"
                android:layout_marginBottom="5dp">

                <no.dega.couchpotatoremote.FontedTextView
                    android:id="@+id/releases_quality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"/>

                <no.dega.couchpotatoremote.FontedTextView
                    android:id="@+id/releases_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/releases_quality"
                    android:textSize="15sp"/>

                <no.dega.couchpotatoremote.FontedTextView
                    android:id="@+id/releases_provider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/releases_status"
                    android:textSize="15sp"/>

                <no.dega.couchpotatoremote.FontedTextView
                    android:id="@+id/releases_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/releases_provider"
                    android:textSize="15sp"/>

                <no.dega.couchpotatoremote.FontedTextView
                    android:id="@+id/releases_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/releases_age"
                    android:textSize="15sp"/>

            </RelativeLayout>

            <Button
                android:id="@+id/releases_download_button"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/CPThemeButton"
                android:layout_below="@id/releases_info"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="left|center_vertical"
                android:onClick="onDownloadButtonPress"
                android:text="@string/download_release_button"/>

            <Button
                android:id="@+id/releases_ignore_button"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/CPThemeButton"
                android:layout_below="@id/releases_download_button"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="left|center_vertical"
                android:onClick="onIgnoreButtonPress"
                android:text="@string/ignore_release_button"/>

            <Button
                android:id="@+id/releases_delete_button"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/CPThemeButton"
                android:layout_below="@id/releases_ignore_button"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="left|center_vertical"
                android:onClick="onDeleteButtonPress"
                android:text="@string/delete_release_button"/>

            </RelativeLayout>

    </ScrollView>

</LinearLayout>